--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
 
     <div class="gifs">
         <!-- Dog GIFs (Replace with actual URLs) -->
-        <img src="/doggos/386ae037-2e02-4b46-9693-1640db27bd72.gif" alt="Cute Doggo 1">
-        <img src="/doggos/ab8fce57-0485-4049-b88b-fc1f3f029873.gif" alt="Cute Doggo 2">
-        <img src="/doggos/Corgi Smirk GIF - Corgi Smirk Dog - Ανακαλύψτε και κοινοποιήστε GIF.gif" alt="Cute Doggo 4">
-        <img src="/doggos/db6c74e0-c74e-4d5b-ab5c-871c31e5ba74.gif" alt="Cute Doggo 5">
-        <img src="/doggos/Dog Petting GIF - Dog Petting Dogs - Discover & Share GIFs.gif" alt="Cute Doggo 6">
-        <img src="/doggos/fluffygif.gif" alt="Cute Doggo 7">
-        <img src="/doggos/On February 23 your dog doesn’t want to be pet….gif" alt="Cute Doggo 8">
-        <img src="/doggos/That thing we do when we feel a sneeze coming.gif" alt="Cute Doggo 9">
-        <img src="/doggos/The Blackbook - BlackMilk Clothing Blog.gif" alt="Cute Doggo 10">
-        <img src="/doggos/This dog knows drama.gif" alt="Cute Doggo 11">
-        <img src="/doggos/Tudo Sobre Cachorros _ Gifs engraçados de….gif" alt="Cute Doggo 12">
+        <img src="/386ae037-2e02-4b46-9693-1640db27bd72.gif" alt="Cute Doggo 1">
+        <img src="/ab8fce57-0485-4049-b88b-fc1f3f029873.gif" alt="Cute Doggo 2">
+        <img src="/Corgi Smirk GIF - Corgi Smirk Dog - Ανακαλύψτε και κοινοποιήστε GIF.gif" alt="Cute Doggo 4">
+        <img src="/db6c74e0-c74e-4d5b-ab5c-871c31e5ba74.gif" alt="Cute Doggo 5">
+        <img src="/Dog Petting GIF - Dog Petting Dogs - Discover & Share GIFs.gif" alt="Cute Doggo 6">
+        <img src="/fluffygif.gif" alt="Cute Doggo 7">
+        <img src="/On February 23 your dog doesn’t want to be pet….gif" alt="Cute Doggo 8">
+        <img src="/That thing we do when we feel a sneeze coming.gif" alt="Cute Doggo 9">
+        <img src="/The Blackbook - BlackMilk Clothing Blog.gif" alt="Cute Doggo 10">
+        <img src="/This dog knows drama.gif" alt="Cute Doggo 11">
+        <img src="/Tudo Sobre Cachorros _ Gifs engraçados de….gif" alt="Cute Doggo 12">
 
     </div>
 
